@@ -428,6 +428,13 @@ LDFLAGS += -nostdlib -nostdinc -static
 LDFLAGS += -Wl,--build-id=none
 ASFLAGS += ${INCLUDES}
 
+# As the kernel has no function pointers or other indirect jumps except those
+# as generated by the compiler through switch statements we can disable jump
+# tables in order to prevent Spectre Variant 2 style attacks. Note that some
+# architectures treat certain kinds of function returns as indirect jumps and
+# this needs other mitigations
+CFLAGS += -fno-jump-tables
+
 # Compiler optimisation level. Note that you can't build the kernel with
 # GCC -Os without linking against libgcc.
 ifeq (${CONFIG_OPTIMISATION_Os},y)
