@@ -263,6 +263,36 @@ config_option(KernelX86DangerousMSR KERNEL_X86_DANGEROUS_MSR
     DEPENDS "KernelArchX86;NOT KernelVerificationBuild"
 )
 
+if (KernelArchX86 AND (NOT "${KernelMaxNumNodes}" EQUAL 1))
+    set(STIBDEP TRUE)
+else()
+    set(STIBDEP FALSE)
+endif()
+
+config_choice(KernelX86IBRSMode KERNEL_X86_IBRS
+    "Indirect Branch Restricted Speculation mode
+    Used to prevent a user from manipulating the branch predictor to manipulate speculative
+    execution of other processes. On current processors IBRS has a prohibitive performance
+    penalty and it is recommended that it be disabled such that software mitigations are
+    used instead. Software mitigation is done by disabling jump tables (the only form of
+    indirect jump in seL4 except for 'ret') and flushing the RSB on vmexit. Flushing the RSB
+    at other times is not needed as seL4 does not switch kernel stacks and so is not
+    vulernable to RSB underflow. The STIBP is essentially software mitigation but enables
+    the single thread isolation for branch predictions. This is only needed if attempting
+    to protect user level process from each other in a multicore environment."
+    "ibrs_none;KernelX86IBRSnone;KERNEL_X86_IBRS_NONE;KernelArchX86"
+    "ibrs_stibp;KernelX86IBRSSTIBP;KERNEL_X86_IBRS_STIBP;STIBPDEP"
+    "ibrs_basic;KernelX86IBRSBasic;KERNEL_X86_IBRS_BASIC;KernelArchX86"
+    "ibrs_all;KernelX86IBRSAll;KERNEL_X86_IBRS_ALL;KernelArchX86"
+)
+
+if (KernelX86IBRSBasic OR KernelX86IBRSSTIBP)
+    # As the kernel has no function pointers or other indirect jumps except those
+    # as generated by the compiler through switch statements we can disable jump
+    # tables in order to prevent Spectre Variant 2 style attacks.
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-jump-tables")
+endif()
+
 add_sources(
     DEP "KernelArchX86"
     PREFIX src/arch/x86
